syntax = "proto3";

package stats.service.analyzer;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.stats.collector";
import "stats/messages/recommendation_event.proto";

service RecommendationsController{
  rpc GetRecommendationsForUser(stats.messages.event.UserPredictionsRequestProto)
      returns (stream stats.messages.event.RecommendedEventProto);

  rpc GetSimilarEvents(stats.messages.event.SimilarEventsRequestProto)
      returns (stream stats.messages.event.RecommendedEventProto);

  rpc GetInteractionsCount(stats.messages.event.InteractionsCountRequestProto)
      returns (stream stats.messages.event.RecommendedEventProto);
}